PCS BAckup 26Dec2023/Backup-Source/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>CIP_Notification_Sent_Date__c</fullName>
        <label>CIP Notification Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>SKU Count</description>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Product Family Map</label>
        <referenceTo>GCP_Product_Family_Map__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OTC_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Private Label Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products (OTC Customer)</relationshipLabel>
        <relationshipName>OTC_Customer_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_API_MFR_Site_DMF_Number__c</fullName>
        <label>1st API MFR Site DMF Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_API_MFR_Site_DUNS_Number__c</fullName>
        <label>1st API MFR Site DUNS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_1st_API_MFR_Site_FEI_Number__c</fullName>
        <label>1st API MFR Site FEI Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_2nd_Active_Ingredient_Drug__c</fullName>
        <label>2nd Active Ingredient Drug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_Active_Ingr_Drug_Name__c</fullName>
        <label>3rd Active Ingredient Drug Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_Active_Ingr_Number_Strength__c</fullName>
        <label>3rd Active Ingredient Numerator Strength</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_3rd_Active_Ingr_Unit_of_Measure__c</fullName>
        <label>3rd Active Ingredient Unit of Measure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_API2_MFR_Site_DMF_Number__c</fullName>
        <label>API2 MFR Site DMF Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_API2_MFR_Site_DUNS_Number__c</fullName>
        <label>API2 MFR Site DUNS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_API2_MFR_Site_FEI_Number__c</fullName>
        <label>API2 MFR Site FEI Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_API2_MFR_site_Address__c</fullName>
        <label>API2 Manufacturing site Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_API3_MFR_Site_Address__c</fullName>
        <label>API3 MFR Site Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_API3_MFR_Site_DMF_Number__c</fullName>
        <label>API3 MFR Site DMF Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_API3_MFR_Site_DUNS_Number__c</fullName>
        <label>API3 MFR Site DUNS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_API3_MFR_Site_FEI_Number__c</fullName>
        <label>API3 MFR Site FEI Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_API_Manufactured_Country__c</fullName>
        <formula>TEXT( Phoenix_Product_Playbook__r.Phoenix_1st_Active_Ingr_Producer_Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Playbook field</inlineHelpText>
        <label>API Manufactured Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_API_Supplier_Name__c</fullName>
        <formula>Phoenix_Product_Playbook__r.Phoenix_1st_Active_Ingredient_Producer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Playbook field</inlineHelpText>
        <label>API Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Discontinue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active/Discontinue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Ingr_Numerator_Strength2__c</fullName>
        <label>2nd Active Ingredient Numerator Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Ingr_Numerator_Strength__c</fullName>
        <label>Active Ingredient Numerator Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Ingr_Producer_Address__c</fullName>
        <label>1st Active Ingr Producer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Ingr_Unit_of_Measure2__c</fullName>
        <label>2nd Active Ingredient Unit of Measure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Active_Ingr_Unit_of_Measure__c</fullName>
        <label>Active Ingredient Unit of Measure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Address_of_Shipper_to_UPS__c</fullName>
        <label>Address of Shipper to UPS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Alcohol_Free__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Alcohol Free</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Alias__c</fullName>
        <inlineHelpText>Alias (Product Description from Label for Offers): User Input field</inlineHelpText>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Approved_Lowest_Price_SKU__c</fullName>
        <label>Approved Lowest Price /SKU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Automation_Equipment_Ready__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Automation Equipment Ready</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bar_Code_Type_at_Unit_of_Use__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Bar Code Type at Unit of Use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>Quick Response (QR) Codes</fullName>
                </value>
                <value>
                    <fullName>Universal Product Codes (UPC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Bar_Coding_at_unit_of_Use__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Bar Coding at Unit of Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Batch_Code__c</fullName>
        <label>Batch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Batch_Upload_Number__c</fullName>
        <label>Batch Upload Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Best_Price__c</fullName>
        <inlineHelpText>Best Price for Government Pricing</inlineHelpText>
        <label>Best Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Brand_Retail_Price__c</fullName>
        <label>Brand Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Brand_WAC__c</fullName>
        <label>Brand WAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Budgeted_ASP_FY__c</fullName>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Budgeted ASP FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Budgeted_ASP_Q1__c</fullName>
        <inlineHelpText>Budgeted ASP Quarter - 1: Finance User Input field</inlineHelpText>
        <label>Budgeted ASP Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Budgeted_ASP_Q2__c</fullName>
        <inlineHelpText>Budgeted ASP Quarter - 2: Finance User Input field</inlineHelpText>
        <label>Budgeted ASP Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Budgeted_ASP_Q3__c</fullName>
        <inlineHelpText>Budgeted ASP Quarter - 3: Finance User Input field</inlineHelpText>
        <label>Budgeted ASP Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_CBP_MID__c</fullName>
        <label>CBP MID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_CIP_Implementation_Date__c</fullName>
        <label>CIP Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_CIP_Throughput_Cost__c</fullName>
        <label>CIP Throughput Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Case_Pack__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>Case Pack</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Comm_Exps__c</fullName>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Comm. Exps %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Compare_to_Brand_Name__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Compare to (Brand Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_for_Best_Price__c</fullName>
        <label>Contract # for Best Price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract_for_Tracking_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Tracking Customer Contract Number for Government Pricing</inlineHelpText>
        <label>Contract # for Tracking Customer</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Substance_Class__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>Controlled Substance Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Controlled_Substance__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>Controlled Substance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Current_Budgeted_ASP__c</fullName>
        <formula>IF(OR( MONTH(TODAY())=4,MONTH(TODAY())=5,MONTH(TODAY())=6), Phoenix_Budgeted_ASP_Q1__c ,
    IF(OR( MONTH(TODAY())=7,MONTH(TODAY())=8,MONTH(TODAY())=9), Phoenix_Budgeted_ASP_Q2__c ,
	IF(OR( MONTH(TODAY())=10,MONTH(TODAY())=11,MONTH(TODAY())=12), Phoenix_Budgeted_ASP_Q3__c ,Phoenix_Budgeted_ASP_Q4__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-generated field</inlineHelpText>
        <label>Current Budgeted ASP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_for_best_price__c</fullName>
        <label>Customer for best price</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_DA__c</fullName>
        <description>formerly known as NDA  - New Drug Application ANDA Abbreviated New Drug Application (Affirmation of Compliance Code).</description>
        <label>DA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_DLS__c</fullName>
        <description>It is formerly known as NDC - National Drug Code (Affirmation of Compliance Code).</description>
        <label>DLS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_DRL_Market_Share__c</fullName>
        <description>This field is used in Market Share popup component at bid line item level</description>
        <inlineHelpText>Dr Reddy’s Market Share (uploaded data)</inlineHelpText>
        <label>DRL Market Share (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_DTP_Contact_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTP Contact Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products (DTP Contact Party)</relationshipLabel>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_DTP_Email__c</fullName>
        <label>DTP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phoenix_DTP_Telephone_Number__c</fullName>
        <label>DTP Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date_of_Discontinuation__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Date of Discontinuation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Deliver_to_Parties_Address__c</fullName>
        <label>Deliver to Parties Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Deliver_to_Parties_Name__c</fullName>
        <label>Deliver to Parties Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Direct_Order_Price__c</fullName>
        <label>Direct Order Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Discontinuation_Comments__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Discontinuation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Dosage_Form__c</fullName>
        <inlineHelpText>Examples: Capsule, Tablet, etc.: SAP field</inlineHelpText>
        <label>Dosage Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bags</fullName>
                </value>
                <value>
                    <fullName>Bliter</fullName>
                </value>
                <value>
                    <fullName>Capsules</fullName>
                </value>
                <value>
                    <fullName>Cream</fullName>
                </value>
                <value>
                    <fullName>Gel</fullName>
                </value>
                <value>
                    <fullName>Granules</fullName>
                </value>
                <value>
                    <fullName>Injectable</fullName>
                </value>
                <value>
                    <fullName>ODT Tablets</fullName>
                </value>
                <value>
                    <fullName>Oral Suspension</fullName>
                </value>
                <value>
                    <fullName>Patch</fullName>
                </value>
                <value>
                    <fullName>Pump</fullName>
                </value>
                <value>
                    <fullName>Respulse</fullName>
                </value>
                <value>
                    <fullName>Single Dose Vial</fullName>
                </value>
                <value>
                    <fullName>Softgels</fullName>
                </value>
                <value>
                    <fullName>Solution / Ampulse</fullName>
                </value>
                <value>
                    <fullName>Sublingual Film</fullName>
                </value>
                <value>
                    <fullName>Suspensions /  Drop</fullName>
                </value>
                <value>
                    <fullName>Tablets</fullName>
                </value>
                <value>
                    <fullName>Transdermal patch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Drug_Intended_Use_Code__c</fullName>
        <label>Drug Intended Use Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Duns_of_Finished_Goods_MFR__c</fullName>
        <formula>Phoenix_Product_Playbook__r.Phoenix_DUNS_of_Finished_Good_Mfg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Playbook field</inlineHelpText>
        <label>Duns # of Finished Goods Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_FDA_Application_Number__c</fullName>
        <inlineHelpText>Playbook field</inlineHelpText>
        <label>FDA Application Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_FDA_Processing_Code__c</fullName>
        <label>FDA Processing Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_FDA_Product_Code__c</fullName>
        <label>FDA Product Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_FDA_Program_Code__c</fullName>
        <label>FDA Program Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_FEI_of_API_Manufacturing_Site__c</fullName>
        <formula>Phoenix_Product_Playbook__r.Phoenix_1st_API_Mfg_Site_FEI_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Playbook field</inlineHelpText>
        <label>FEI # of API Manufacturing Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_FEI_of_Finished_Goods_MFR__c</fullName>
        <formula>Phoenix_Product_Playbook__r.Phoenix_FEI_of_Finished_Good_Mfg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Playbook field</inlineHelpText>
        <label>FEI # of Finished Goods Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finished_Goods_MFR_Name__c</fullName>
        <label>Finished Goods MFR Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finished_Goods_Mfactured_Country__c</fullName>
        <formula>TEXT( Phoenix_Product_Playbook__r.Phoenix_Finished_Good_MFR_Add_Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Playbook field</inlineHelpText>
        <label>Finished Goods Manufactured Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Finished_Goods_Supplier_Name__c</fullName>
        <formula>Phoenix_Product_Playbook__r.Phoenix_Finished_Good_MFR_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Playbook field</inlineHelpText>
        <label>Finished Goods Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_First_Active_Ingredient_Drug__c</fullName>
        <label>First Active Ingredient Drug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_First_Active_Ingredient_Producer__c</fullName>
        <label>First Active Ingredient Producer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_GCN_Generic_Code_Number__c</fullName>
        <description>It contains 5 digits.</description>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>GCN (Generic Code Number)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_GCN_Sequence_Number__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>GCN Sequence Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_GPI_Dashes__c</fullName>
        <formula>IF(NOT(ISBLANK(Phoenix_GPI_Generic_Product_Identifier__c )),LEFT( Phoenix_GPI_Generic_Product_Identifier__c ,2) +&apos;-&apos;+ MID( Phoenix_GPI_Generic_Product_Identifier__c, 3,2) +&apos;-&apos;+ MID( Phoenix_GPI_Generic_Product_Identifier__c, 5,2) +&apos;-&apos;+ MID( Phoenix_GPI_Generic_Product_Identifier__c, 7,2) +&apos;-&apos;+ MID( Phoenix_GPI_Generic_Product_Identifier__c, 9,2) +&apos;-&apos;+ MID( Phoenix_GPI_Generic_Product_Identifier__c, 11,2) +&apos;-&apos;+ RIGHT(Phoenix_GPI_Generic_Product_Identifier__c, 2),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>GPI with Dashes: Auto-generated field</inlineHelpText>
        <label>GPI (Dashes)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_GPI_Generic_Product_Identifier__c</fullName>
        <description>It contains 14 characters.</description>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>GPI (Generic Product Identifier)  </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Generic_Name__c</fullName>
        <label>Generic Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_HDE__c</fullName>
        <description>Humanitarian Device Exemption (Affirmation of Compliance Code).</description>
        <label>HDE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_HTS_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HTS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_IMS_Market_Share__c</fullName>
        <label>IMS Market Share</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_IND__c</fullName>
        <description>Investigative New Drug Number (Affirmation of Compliance Code).</description>
        <label>IND</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_IPA_Floor_Price_Effective_Date__c</fullName>
        <label>IPA Floor Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_IPA_Floor_Price__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>IPA Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Imported_or_Domestic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported or Domestic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importers_Address__c</fullName>
        <label>Importers  Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importers_Contact_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Importers Contact Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importers_Name__c</fullName>
        <label>Importers Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importers_Telephone_Number__c</fullName>
        <label>Importers Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phoenix_Importers_email_address__c</fullName>
        <label>Importers email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Control_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Control Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Exclude_Bid1__c</fullName>
        <description>This field is for Reporting purpose only.</description>
        <formula>IF(  Phoenix_Is_Exclude_Bid__c  ,&apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Exclude Bid (Yes / No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Exclude_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Is Exclude Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_IPA_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Is IPA Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_New_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_Private_Label_OTC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Private Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Is_partner_product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Is Partner Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Last_Updated_Date__c</fullName>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Latest_Estimate__c</fullName>
        <inlineHelpText>Finance User Input field</inlineHelpText>
        <label>Latest Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Latex_Free__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Latex Free</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Limited_Distribution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Limited Distribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Lowest_Price_SKU__c</fullName>
        <inlineHelpText>Auto-generated field</inlineHelpText>
        <label>Lowest Price /SKU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Marketing_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Medicaid_Per_Unit__c</fullName>
        <label>Medicaid Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Mercury_Free__c</fullName>
        <inlineHelpText>User Input field</inlineHelpText>
        <label>Mercury Free</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined Yet</fullName>
                    <default>true</default>
                    <label>Not Defined Yet</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Minimum_Order_Quantity__c</fullName>
        <inlineHelpText>SAP field</inlineHelpText>
        <label>Minimum Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_11_Dashes__c</fullName>
        <formula>IF(NOT(ISBLANK( Phoenix_NDC_11__c )),
IF((OR(BEGINS(Phoenix_NDC_11__c , &apos;55111&apos;),BEGINS(Phoenix_NDC_11__c , &apos;43598&apos;),BEGINS(Phoenix_NDC_11__c , &apos;51862&apos;),BEGINS(Phoenix_NDC_11__c , &apos;68308&apos;),BEGINS(Phoenix_NDC_11__c , &apos;30142&apos;),BEGINS(Phoenix_NDC_11__c , &apos;70000&apos;),BEGINS(Phoenix_NDC_11__c , &apos;51316&apos;))),
LEFT( Phoenix_NDC_11__c , 5) +&apos;-&apos;+ MID( Phoenix_NDC_11__c, 6,4) +&apos;-&apos;+ RIGHT(Phoenix_NDC_11__c, 2),LEFT( Phoenix_NDC_11__c , 5) +&apos;-&apos;+ MID( Phoenix_NDC_11__c, 6,3) +&apos;-&apos;+ RIGHT(Phoenix_NDC_11__c, 2)),&apos;&apos;)</formula>
        <inlineHelpText>Auto-generated field</inlineHelpText>
        <label>NDC - 11 (with Dashes)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_11__c</fullName>
        <inlineHelpText>National Drug Code: (Auto -generated field)</inlineHelpText>
        <label>NDC - 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_NDC_Registered_with_FDA1__c</fullName>
        <description>This field is for Reporting purpose only.</description>
        <formula>IF(  Phoenix_NDC_Registered_with_FDA__c ,&apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>NDC Registered with FDA  (Yes / No)</label>
        <type>Text</type>
    </fields>
</CustomObject>